# payments-engine

./: .gitignore  Cargo.toml  README.md
sample-data-generator/: Cargo.toml
sample-data-generator/src/: main.rs
src/: engine.rs  main.rs  transaction.rs  util.rs
tests/: integration_tests.rs  sample_transactions_test.rs
tests/test_sample_data/: sample_transactions.csv
