[package]
name = "payments-engine"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["sample-data-generator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
csv = "1.3.0"
anyhow = "1.0.89"
